Add hero section

--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Welcome to Royal Taste</h1>
-            <p>Experience the finest dining</p>
-            <a href="#" class="btn">Explore Menu</a>
-        </div>
-    </section>
+   <section class="hero">
+    <div class="overlay"></div>
+
+    <div class="hero-content">
+        <h1>Royal Taste</h1>
+        <p>Experience Fine Dining Like Never Before</p>
+        <a href="#" class="btn">Reserve a Table</a>
+    </div>
+</section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 Royal Taste. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
