--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>The Restaurant</title>
@@ -11,34 +12,68 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">Royal Taste</div>
-        <ul>
+
+        <ul class="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
             <li><a href="#">About</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Events</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+
+        <a href="#" class="nav-btn">Book Now</a>
     </nav>
 
     <!-- Hero Section -->
-   <section class="hero">
-    <div class="overlay"></div>
+    <section class="hero">
+        <div class="overlay"></div>
 
-    <div class="hero-content">
-        <h1>Royal Taste</h1>
-        <p>Experience Fine Dining Like Never Before</p>
-        <a href="#" class="btn">Reserve a Table</a>
-    </div>
-</section>
+        <div class="hero-content">
+            <h1>Royal Taste</h1>
+            <p>Experience Fine Dining Like Never Before</p>
+            <a href="#" class="btn">Reserve a Table</a>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Royal Taste. All rights reserved.</p>
+        <div class="footer-container">
+
+            <div class="footer-section">
+                <h3>Royal Taste</h3>
+                <p>Fine dining experience with luxury ambience and world-class cuisine.</p>
+            </div>
+
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h4>Contact</h4>
+                <p>123 Fine Street</p>
+                <p>Mumbai, India</p>
+                <p>+91 9876543210</p>
+            </div>
+
+        </div>
+
+        <div class="footer-bottom">
+            <p>© 2026 Royal Taste. All Rights Reserved.</p>
+        </div>
     </footer>
 
 </body>
+
 </html>
