Added premium structure

--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>The Restaurant</title>
+    <title>Royal Taste</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Google Font -->
-    <link href="CSS/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="main-navbar">
         <div class="logo">Royal Taste</div>
 
         <ul class="nav-links">
@@ -32,14 +29,12 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="overlay"></div>
-
-        <div class="hero-content">
-            <h1>Royal Taste</h1>
-            <p>Experience Fine Dining Like Never Before</p>
-            <a href="#" class="btn">Reserve a Table</a>
-        </div>
-    </section>
+    <div class="hero-content">
+        <h1>Royal Taste</h1>
+        <p>Experience Fine Dining Like Never Before</p>
+        <a href="#" class="btn-primary">Reserve a Table</a>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer class="footer">
