Added updated2 structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Royal Taste</title>
@@ -47,8 +48,8 @@
     <section id="about" style="padding: 100px 80px; text-align:center;">
         <h2 style="font-size:2.5rem; margin-bottom:20px;">About Us</h2>
         <p style="max-width:800px; margin:0 auto; color:#555;">
-            Welcome to Royal Taste, where luxury meets flavor. 
-            We provide an unforgettable dining experience with 
+            Welcome to Royal Taste, where luxury meets flavor.
+            We provide an unforgettable dining experience with
             premium ingredients, elegant ambiance, and world-class service.
         </p>
     </section>
@@ -57,24 +58,36 @@
     <!-- =========================
          MENU SECTION
     ========================== -->
-    <section id="menu" style="padding:100px 80px; background:#f9f9f9; text-align:center;">
-        <h2 style="font-size:2.5rem; margin-bottom:50px;">Our Signature Dishes</h2>
+    <section id="menu">
+        <h2>Our Signature Dishes</h2>
 
-        <div style="display:flex; justify-content:center; gap:40px; flex-wrap:wrap;">
-            
-            <div style="width:280px;">
-                <img src="../images/menu_tapas.jpg" alt="Dish 1" style="width:100%; border-radius:15px;">
-                <h3 style="margin-top:15px;">Grilled Steak</h3>
+        <div class="menu-container">
+
+            <div class="menu-card">
+                <img src="images/menu_tapas.jpg" alt="Gourmet Tapas">
+                <div class="menu-info">
+                    <h3>Gourmet Tapas</h3>
+                    <p>A beautifully plated selection of colorful Mediterranean tapas bursting with fresh flavors and
+                        artistic presentation.</p>
+                </div>
             </div>
 
-            <div style="width:280px;">
-                <img src="../images/menu_cocktail.jpg" alt="Dish 2" style="width:100%; border-radius:15px;">
-                <h3 style="margin-top:15px;">Italian Pasta</h3>
+            <div class="menu-card">
+                <img src="images/menu_brunch.jpg" alt="Luxury Brunch">
+                <div class="menu-info">
+                    <h3>Luxury Brunch</h3>
+                    <p>An elegant brunch experience featuring handcrafted cocktails and chef-curated delights in a
+                        refined setting.</p>
+                </div>
             </div>
 
-            <div style="width:280px;">
-                <img src="../images/menu_brunch.jpg" alt="Dish 3" style="width:100%; border-radius:15px;">
-                <h3 style="margin-top:15px;">Seafood Special</h3>
+            <div class="menu-card">
+                <img src="images/menu_cocktail.jpg" alt="Signature Cocktails">
+                <div class="menu-info">
+                    <h3>Signature Cocktails</h3>
+                    <p>Expertly mixed signature cocktails made with premium spirits, fresh ingredients, and a touch of
+                        creativity.</p>
+                </div>
             </div>
 
         </div>
@@ -87,7 +100,7 @@
     <section id="events" style="padding:100px 80px; text-align:center;">
         <h2 style="font-size:2.5rem; margin-bottom:20px;">Events & Celebrations</h2>
         <p style="max-width:800px; margin:0 auto; color:#555;">
-            Host your birthdays, anniversaries, and corporate events 
+            Host your birthdays, anniversaries, and corporate events
             in our elegant private dining spaces.
         </p>
     </section>
@@ -139,4 +152,5 @@
     </footer>
 
 </body>
+
 </html>
