Added updated4 structure

--- a/index.html
+++ b/index.html
@@ -97,13 +97,51 @@
     <!-- =========================
          EVENTS SECTION
     ========================== -->
-    <section id="events" style="padding:100px 80px; text-align:center;">
-        <h2 style="font-size:2.5rem; margin-bottom:20px;">Events & Celebrations</h2>
-        <p style="max-width:800px; margin:0 auto; color:#555;">
-            Host your birthdays, anniversaries, and corporate events
-            in our elegant private dining spaces.
-        </p>
-    </section>
+    <section id="events">
+    <div class="events-container">
+        
+        <h2>Upcoming Events</h2>
+        <p class="events-subtitle">Join us for unforgettable dining experiences</p>
+
+        <div class="events-grid">
+
+            <!-- Event 1 -->
+            <div class="event-card">
+                <img src="images/event_wine.jpg" alt="Wine Tasting Night">
+                <div class="event-info">
+                    <h3>Wine Tasting Night</h3>
+                    <span class="event-date">March 25, 2026</span>
+                    <p>Experience an exclusive evening of premium wine tasting paired with gourmet appetizers.</p>
+                    <a href="#" class="event-btn">Reserve Now</a>
+                </div>
+            </div>
+
+            <!-- Event 2 -->
+            <div class="event-card">
+                <img src="images/event_live_music.jpg" alt="Live Music Dinner">
+                <div class="event-info">
+                    <h3>Live Music Dinner</h3>
+                    <span class="event-date">April 5, 2026</span>
+                    <p>Enjoy a delightful dinner while listening to soothing live jazz performances.</p>
+                    <a href="#" class="event-btn">Reserve Now</a>
+                </div>
+            </div>
+
+            <!-- Event 3 -->
+            <div class="event-card">
+                <img src="images/event_chef_special.jpg" alt="Chef's Special Night">
+                <div class="event-info">
+                    <h3>Chef's Special Night</h3>
+                    <span class="event-date">April 18, 2026</span>
+                    <p>A curated 5-course meal crafted specially by our head chef for one exclusive night.</p>
+                    <a href="#" class="event-btn">Reserve Now</a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</section>
 
 
     <!-- =========================
