Added image update structure

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <!-- Event 1 -->
             <div class="event-card">
-                <img src="images/event_wine.jpg" alt="Wine Tasting Night">
+                <img src="images/dinning_1.jpg" alt="Wine Tasting Night">
                 <div class="event-info">
                     <h3>Wine Tasting Night</h3>
                     <span class="event-date">March 25, 2026</span>
@@ -118,7 +118,7 @@
 
             <!-- Event 2 -->
             <div class="event-card">
-                <img src="images/event_live_music.jpg" alt="Live Music Dinner">
+                <img src="images/dinning_2.jpg" alt="Live Music Dinner">
                 <div class="event-info">
                     <h3>Live Music Dinner</h3>
                     <span class="event-date">April 5, 2026</span>
@@ -129,7 +129,7 @@
 
             <!-- Event 3 -->
             <div class="event-card">
-                <img src="images/event_chef_special.jpg" alt="Chef's Special Night">
+                <img src="images/dinning_3.jpg" alt="Chef's Special Night">
                 <div class="event-info">
                     <h3>Chef's Special Night</h3>
                     <span class="event-date">April 18, 2026</span>
