Added hero update structure

--- a/index.html
+++ b/index.html
@@ -33,13 +33,53 @@
     <!-- =========================
          HERO SECTION
     ========================== -->
-    <section class="hero" id="home">
-        <div class="hero-content">
-            <h1>Royal Taste</h1>
-            <p>Experience Fine Dining Like Never Before</p>
-            <a href="#menu" class="btn">Reserve a Table</a>
+    <section id="hero">
+
+    <div class="hero-slider">
+
+        <!-- Slide 1 -->
+        <div class="slide">
+            <img src="images/hero_0.jpg" alt="Luxury Dining">
+            <div class="hero-content">
+                <h1>Welcome to Royal Taste</h1>
+                <p>Experience Fine Dining Like Never Before</p>
+                <a href="#menu" class="hero-btn">Explore Menu</a>
+            </div>
         </div>
-    </section>
+
+        <!-- Slide 2 -->
+        <div class="slide">
+            <img src="images/hero_2.jpg" alt="Gourmet Dishes">
+            <div class="hero-content">
+                <h1>Exquisite Flavors</h1>
+                <p>Crafted by World-Class Chefs</p>
+                <a href="#events" class="hero-btn">View Events</a>
+            </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="slide">
+            <img src="images/hero_3.jpg" alt="Signature Cocktails">
+            <div class="hero-content">
+                <h1>Signature Cocktails</h1>
+                <p>Perfectly Blended Perfection</p>
+                <a href="#contact" class="hero-btn">Book a Table</a>
+            </div>
+        </div>
+
+        <!-- Slide 4 -->
+        <div class="slide">
+            <img src="images/hero_4.jpg" alt="Luxury Ambience">
+            <div class="hero-content">
+                <h1>Luxury Ambience</h1>
+                <p>Elegant Atmosphere for Special Moments</p>
+                <a href="#about" class="hero-btn">Discover More</a>
+            </div>
+        </div>
+
+    </div>
+
+</section>
 
 
     <!-- =========================
