--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
     <!-- =========================
          HERO SECTION
     ========================== -->
-    <section id="hero">
+   <section id="hero">
 
     <div class="hero-slider">
 
         <!-- Slide 1 -->
         <div class="slide">
-            <img src="images/hero_0.jpg" alt="Luxury Dining">
+            <img src="images/hero_0.png" alt="Luxury Dining">
+            <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Welcome to Royal Taste</h1>
                 <p>Experience Fine Dining Like Never Before</p>
@@ -50,6 +51,7 @@
         <!-- Slide 2 -->
         <div class="slide">
             <img src="images/hero_2.jpg" alt="Gourmet Dishes">
+            <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Exquisite Flavors</h1>
                 <p>Crafted by World-Class Chefs</p>
@@ -60,6 +62,7 @@
         <!-- Slide 3 -->
         <div class="slide">
             <img src="images/hero_3.jpg" alt="Signature Cocktails">
+            <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Signature Cocktails</h1>
                 <p>Perfectly Blended Perfection</p>
@@ -70,6 +73,7 @@
         <!-- Slide 4 -->
         <div class="slide">
             <img src="images/hero_4.jpg" alt="Luxury Ambience">
+            <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Luxury Ambience</h1>
                 <p>Elegant Atmosphere for Special Moments</p>
@@ -77,6 +81,14 @@
             </div>
         </div>
 
+    </div>
+
+    <!-- Slider Dots -->
+    <div class="hero-dots">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 
 </section>
