Added image update done structure

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <!-- Slide 1 -->
         <div class="slide">
-            <img src="images/hero_0.png" alt="Luxury Dining">
+            <img src="images/hero_01.jpg" alt="Luxury Dining">
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Welcome to Royal Taste</h1>
@@ -50,7 +50,7 @@
 
         <!-- Slide 2 -->
         <div class="slide">
-            <img src="images/hero_2.jpg" alt="Gourmet Dishes">
+            <img src="images/hero_02.jpg" alt="Gourmet Dishes">
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Exquisite Flavors</h1>
@@ -61,7 +61,7 @@
 
         <!-- Slide 3 -->
         <div class="slide">
-            <img src="images/hero_3.jpg" alt="Signature Cocktails">
+            <img src="images/hero_03.jpg" alt="Signature Cocktails">
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Signature Cocktails</h1>
@@ -72,7 +72,7 @@
 
         <!-- Slide 4 -->
         <div class="slide">
-            <img src="images/hero_4.jpg" alt="Luxury Ambience">
+            <img src="images/hero_04.jpg" alt="Luxury Ambience">
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Luxury Ambience</h1>
